[gd_scene load_steps=34 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]
[ext_resource path="res://assets/animations/teleporter/idle/idle_idle_00.png" type="Texture" id=2]
[ext_resource path="res://assets/animations/teleporter/idle/idle_idle_01.png" type="Texture" id=3]
[ext_resource path="res://assets/animations/teleporter/idle/idle_idle_03.png" type="Texture" id=4]
[ext_resource path="res://assets/animations/teleporter/idle/idle_idle_04.png" type="Texture" id=5]
[ext_resource path="res://assets/animations/teleporter/idle/idle_idle_05.png" type="Texture" id=6]
[ext_resource path="res://assets/animations/teleporter/idle/idle_idle_06.png" type="Texture" id=7]
[ext_resource path="res://assets/animations/teleporter/idle/idle_idle_07.png" type="Texture" id=8]
[ext_resource path="res://assets/animations/teleporter/idle/idle_idle_08.png" type="Texture" id=9]
[ext_resource path="res://assets/animations/teleporter/idle/idle_idle_09.png" type="Texture" id=10]
[ext_resource path="res://assets/animations/teleporter/idle/idle_idle_10.png" type="Texture" id=11]
[ext_resource path="res://assets/animations/teleporter/player_absorbed/player_absorbed_Player Absorbed_0.png" type="Texture" id=12]
[ext_resource path="res://assets/animations/teleporter/player_absorbed/player_absorbed_Player Absorbed_1.png" type="Texture" id=13]
[ext_resource path="res://assets/animations/teleporter/player_absorbed/player_absorbed_Player Absorbed_2.png" type="Texture" id=14]
[ext_resource path="res://assets/animations/teleporter/player_absorbed/player_absorbed_Player Absorbed_3.png" type="Texture" id=15]
[ext_resource path="res://assets/animations/teleporter/player_absorbed/player_absorbed_Player Absorbed_4.png" type="Texture" id=16]
[ext_resource path="res://assets/animations/teleporter/player_absorbed/player_absorbed_Player Absorbed_5.png" type="Texture" id=17]
[ext_resource path="res://assets/animations/teleporter/player_absorbed/player_absorbed_Player Absorbed_6.png" type="Texture" id=18]
[ext_resource path="res://assets/animations/teleporter/player_tp/player_tp_Player Tping_0.png" type="Texture" id=19]
[ext_resource path="res://assets/animations/teleporter/player_tp/player_tp_Player Tping_1.png" type="Texture" id=20]
[ext_resource path="res://assets/animations/teleporter/player_tp/player_tp_Player Tping_2.png" type="Texture" id=21]
[ext_resource path="res://assets/animations/teleporter/player_tp/player_tp_Player Tping_3.png" type="Texture" id=22]
[ext_resource path="res://assets/animations/teleporter/player_done/player_done_Player going out_0.png" type="Texture" id=23]
[ext_resource path="res://assets/animations/teleporter/player_done/player_done_Player going out_1.png" type="Texture" id=24]
[ext_resource path="res://assets/animations/teleporter/player_done/player_done_Player going out_2.png" type="Texture" id=25]
[ext_resource path="res://assets/animations/teleporter/player_done/player_done_Player going out_3.png" type="Texture" id=26]
[ext_resource path="res://assets/animations/teleporter/player_done/player_done_Player going out_4.png" type="Texture" id=27]
[ext_resource path="res://assets/animations/teleporter/player_done/player_done_Player going out_5.png" type="Texture" id=28]
[ext_resource path="res://assets/animations/teleporter/player_done/player_done_Player going out_6.png" type="Texture" id=29]
[ext_resource path="res://assets/animations/teleporter/player_done/player_done_Player going out_7.png" type="Texture" id=30]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ) ],
"loop": false,
"name": "absorb",
"speed": 10.0
}, {
"frames": [ ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ) ],
"loop": true,
"name": "teleporting",
"speed": 10.0
}, {
"frames": [ ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ) ],
"loop": false,
"name": "done",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="RectangleShape2D" id=3]

[node name="Teleporter" type="Node2D"]
script = ExtResource( 1 )

[node name="From" type="Area2D" parent="."]
position = Vector2( -7.62939e-006, 3.8147e-006 )
collision_layer = 0

[node name="FromS" type="AnimatedSprite" parent="From"]
frames = SubResource( 1 )
animation = "idle"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="From"]
shape = SubResource( 2 )

[node name="To" type="Area2D" parent="."]
position = Vector2( 0, -28 )
__meta__ = {
"_edit_group_": true
}

[node name="ToS" type="AnimatedSprite" parent="To"]
frames = SubResource( 1 )
animation = "idle"
frame = 7
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="To"]
shape = SubResource( 3 )

[node name="Tween" type="Tween" parent="."]
[connection signal="body_entered" from="From" to="." method="_on_From_body_entered"]
[connection signal="body_exited" from="From" to="." method="_on_From_body_exited"]
[connection signal="animation_finished" from="From/FromS" to="." method="_on_FromS_animation_finished"]
[connection signal="body_entered" from="To" to="." method="_on_To_body_entered"]
[connection signal="body_exited" from="To" to="." method="_on_To_body_exited"]
[connection signal="animation_finished" from="To/ToS" to="." method="_on_ToS_animation_finished"]
